SUBDIRS = stylesheet-images
EXTRA_DIST = $(html_DATA)
htmldir=$(XFCE_DIR)/help/html
html_DATA=\
 utils-xfrun.html \
 utils-xfmouse.html \
 license.html \
 setup-xfce.html \
 adv-wm-appearance.html \
 adv-wm-xresources.html \
 utils-xfsamba.html \
 adv-wm-commands.html \
 utils-xfglob.html \
 adv-wm-style.html \
 copyright.html \
 user-manual.html \
 install.html \
 utils-xfgnome.html \
 overview.html \
 utils-xfumed.html \
 setup-wm.html \
 fileman.html \
 utils-xfdiff.html \
 setup-startup.html \
 utils-xfpager.html \
 utils-xfbdmgr.html \
 panel.html \
 utils-xfmenu.html \
 wm-examples-2.html \
 adv-wm-management.html \
 setup.html \
 utilities.html \
 intro.html \
 adv-wm-bindings.html \
 adv-wm-defaults.html \
 advanced-wm.html \
 adv-wm-general.html \
 wm.html \
 help.html \
 utils-xfsound.html \
 utils-xfclock.html \
 gpl.html \
 adv-wm-menus.html \
 ln9.html \
 adv-wm-examples.html \
 resources.html
