EXTRA_DIST = $(images_DATA)
imagesdir = $(XFCE_DIR)/help/images
images_DATA = \
 xfdiff.jpg \
 xfce_setup1.jpg \
 xfce_setup2.jpg \
 xfce_setup3.jpg \
 xfce_setup4.jpg \
 xfce_popup.jpg \
 xfce_panel.jpg \
 xfbdmgr.jpg \
 xfglob.jpg \
 buttons.jpg \
 xfce_snap.jpg \
 xfmouse.jpg \
 xfbd.jpg \
 xfrun.jpg \
 xfpager.jpg \
 xfumed.jpg \
 xfce_slogan.jpg \
 xfsound.jpg \
 xfclock.jpg \
 xftree.jpg \
 xfsamba.jpg
