EXTRA_DIST = $(noinst_DATA)
noinst_DATA = \
 GPL.sgml \
 license.sgml \
 preface.sgml \
 userman.sgml \
 xfce-help.sgml \
 advanced-xfwm.sgml \
 ch-fileman.sgml \
 ch-install.sgml \
 ch-overview.sgml \
 ch-panel.sgml \
 ch-resources.sgml \
 ch-setup.sgml \
 ch-utilities.sgml \
 ch-wm-appearance.sgml \
 ch-wm-bindings.sgml \
 ch-wm-commands.sgml \
 ch-wm-defaults.sgml \
 ch-wm-examples.sgml \
 ch-wm-general.sgml \
 ch-wm-management.sgml \
 ch-wm-menus.sgml \
 ch-wm.sgml \
 ch-wm-style.sgml \
 ch-wm-xresources.sgml \
 copyright.sgml
