EXTRA_DIST = $(noinst_DATA)
noinst_DATA = \
 comp1.xpm \
 comp2.xpm \
 delete.xpm \
 dir_close_lnk.xpm \
 dir_close.xpm \
 dir_open_lnk.xpm \
 dir_open.xpm \
 dotfile.xpm \
 download.xpm \
 go_back.xpm \
 go_to.xpm \
 help.xpm \
 home.xpm \
 ip.xpm \
 new_dir.xpm \
 page.xpm \
 print.xpm \
 rdotfile.xpm \
 reload.xpm \
 rpage.xpm \
 stop.xpm \
 tar.xpm \
 upload.xpm \
 view1.xpm \
 view2.xpm \
 view3.xpm \
 view4.xpm \
 warning.xpm \
 wg1.xpm \
 wg2.xpm \
 mount.xpm \
 tb_paste.xpm \
 tb_cut.xpm \
 tb_copy.xpm \
 new_win.xpm \
 xfsamba.xpm
